# tahweel

./: .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  Dockerfile  LICENSE  README.en.md  README.md  colab_notebook.ipynb  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: docker-publish.yml  pre-commit.yml  release.yml  tests.yml
tahweel/: __init__.py  cli.py  downsize.sh  tahweel_argument_parser.py
tahweel/decorators/: __init__.py  retry.py
tahweel/enums/: __init__.py  dir_output_type.py  output_format_type.py  tahweel_type.py  transformation_type.py
tahweel/managers/: __init__.py  base_file_manager.py  file_managers_factory.py  image_file_manager.py  pdf_file_manager.py  pdf_manager.py
tahweel/models/: __init__.py  transformation.py
tahweel/processors/: __init__.py  base_ocr_processor.py  google_drive_base_ocr_processor.py  google_drive_ocr_processor.py  google_drive_on_colab_ocr_processor.py
tahweel/utils/: image_utils.py  string_utils.py
tahweel/writers/: __init__.py  docx_writer.py  txt_writer.py
