[tool.poetry]
name = "tahweel"
version = "0.0.12"
description = "تحويل ملفات PDF إلى Word و TXT"
authors = ["EasyBooks <easybooksdev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tahweel" }]
keywords = ["tahweel", "ocr", "pdf", "word", "txt", "google-drive-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
homepage = "https://tahweel.ieasybooks.com"
repository = "https://github.com/ieasybooks/tahweel"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typed-argument-parser = "^1.10.1"
google-api-python-client = "^2.138.0"
google-auth-oauthlib = "^1.2.1"
pdf2image = "^1.17.0"
platformdirs = "^4.2.2"
tqdm = "^4.66.4"
google-api-python-client-stubs = "^1.26.0"
python-docx = "^1.1.2"
pillow = "^10.4.0"

[tool.poetry.scripts]
tahweel = "tahweel.cli:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.5.5"

[tool.ruff]
fix = true
indent-width = 2
line-length = 120
src = ["tahweel"]
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
